[gd_scene load_steps=6 format=3 uid="uid://bw4b8xyq4biud"]

[ext_resource type="Script" uid="uid://v45aqh6mnwb7" path="res://scenes/laser.gd" id="1_xmihv"]
[ext_resource type="PackedScene" uid="uid://c8kfxdy6y0ks5" path="res://scenes/end_particles.tscn" id="2_a7dhc"]
[ext_resource type="PackedScene" uid="uid://cb53ovk7h8mqg" path="res://scenes/beam_particles.tscn" id="3_jjj73"]

[sub_resource type="CylinderMesh" id="CylinderMesh_5no5p"]
resource_local_to_scene = true
flip_faces = true
top_radius = 0.03
bottom_radius = 0.03
height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xmihv"]
transparency = 1
albedo_color = Color(0.728288, 0.128702, 0.154746, 1)
emission_enabled = true
emission = Color(0.729412, 0.129412, 0.152941, 1)
emission_energy_multiplier = 10.0

[node name="Laser" type="RayCast3D"]
script = ExtResource("1_xmihv")

[node name="BeamMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_5no5p")
surface_material_override/0 = SubResource("StandardMaterial3D_xmihv")

[node name="EndParticles" parent="." instance=ExtResource("2_a7dhc")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="BeamParticles" parent="." instance=ExtResource("3_jjj73")]
